# q1simulator

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py  tbump.toml
demo/: demo.py  demo_multiple.py
demo/demo_data/: q1seq_P1.json  q1seq_P2.json  q1seq_R1.json  q1seq_q1.json
q1simulator/: Qblox_QCM_pulse_response.hdf5  __init__.py  analogue_filter.py  channel_data.py  cluster.py  q1core.py  q1module.py  q1parser.py  q1plotter.py  q1sequencer.py  q1simulator.py  q1viewer.py  qblox_version.py  rt_renderer.py  trigger_sorting.py  triggers.py
q1simulator/gui/: program_browser.py  program_details.py  program_plotter.py  qt_utils.py
test/: simple_acquire.py  test_conditional.py  test_conditional2.py  test_qcodes_param.py  test_trigger_distribution.py
